API Endpoints Docs Updated
