# docs/assets/api-spec.yml
@@ -13,7 +13,7 @@ info:
 servers:
   - url: http://localhost:80/api/
 paths:
-  /decklink/info:
+  /decklink:
     get:
       description: Gets the info about currently attached Decklink cards
       tags:
@@ -23,8 +23,17 @@ paths:
       responses:
         "200":
           description: Success
-  /decklink/cardIndex:
+  /decklink/:cardIndex:
     get:
+      description: Gets the config for an individual Decklink card
+      tags:
+        - decklink
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: Success
+    post:
       description: Sets the config for an individual Decklink card
       tags:
         - decklink
@@ -33,17 +42,86 @@ paths:
       responses:
         "200":
           description: Success
-  /decklink/:cardIndex:/file:
+  /decklink/:cardIndex/file:
     get:
       description: Sends a file to a decklink output
       tags:
         - decklink
+      parameters:
+        - in: formData
+          name: filename
+          type: string
+          description: Filename and extension of media to playout. E.g - test.mp4
+          required: true
+        - in: formData
+          name: cardName
+          type: string
+          description: The name of the BMD Decklink cards. E.g - "DeckLink SDI"
+          required: true
+        - in: formData
+          name: font
+          type: string
+          description: The name of the font file to use for text overlay. Must use the
+            TrueType fonts. E.g - "swansea-bold.ttf"
+          required: font
+        - in: formData
+          name: offset
+          type: number
+          description: Offset for time in hours. E.g 3, -3
+          required: false
+        - in: formData
+          name: timecode
+          type: boolean
+          description: Show the timecode line - true,false
+          required: false
+        - in: formData
+          name: repeat
+          type: boolean
+          description: Decides whether the media loops or not
+          required: false
       produces:
         - application/json
       responses:
         "200":
           description: Success
-  /decklink/:cardIndex:/recod:
+  /decklink/:cardIndex/record:
+    get:
+      description: Record the input of a decklink card index to file
+      tags:
+        - decklink
+      parameters:
+        - in: formData
+          name: cardName
+          type: string
+          description: The name of the BMD Decklink cards. E.g - "DeckLink SDI"
+          required: true
+        - in: formData
+          name: font
+          type: string
+          description: The name of the font file to use for text overlay. Must use the
+            TrueType fonts. E.g - "swansea-bold.ttf"
+          required: font
+        - in: formData
+          name: offset
+          type: number
+          description: Offset for time in hours. E.g 3, -3
+          required: false
+        - in: formData
+          name: timecode
+          type: boolean
+          description: Show the timecode line - true,false
+          required: false
+        - in: formData
+          name: repeat
+          type: boolean
+          description: Decides whether the media loops or not
+          required: false
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: Success
+  /decklink/:cardIndex/hls:
     get:
       description: Converts the input of a decklink card index to hls
       tags:
@@ -53,7 +131,17 @@ paths:
       responses:
         "200":
           description: Success
-  /decklink/bars:
+  /decklink/:cardIndex:/srt:
+    get:
+      description: Converts the input of a decklink card index to hls
+      tags:
+        - decklink
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: Success
+  /decklink/:cardIndex/bars:
     get:
       description: Sends some SMPTE bars to a decklink output
       tags:
@@ -73,7 +161,7 @@ paths:
       responses:
         "200":
           description: Success
-  /decklink/stop:
+  /decklink/:cardIndex/stop:
     get:
       description: Stops the decklink output on a particular index
       tags:
@@ -83,7 +171,7 @@ paths:
       responses:
         "200":
           description: Success
-  /decklink/pause:
+  /decklink/:cardIndex/pause:
     get:
       description: Pauses the decklink output on a particular index
       tags:
